--- a/sweb.html
+++ b/sweb.html
@@ -23,14 +23,14 @@
      </div>
 
       <!-- Titre principale -->
-      <div class="ti"><br><br>
-          <h2 class="you"> Your are ate Home </h2><br><br><br><br>
-                <p> 
-                    Apimo vous propose un logiciel immobilier complet et performant,
-                    des sites internet optimisés pour le référencement et responsive design,
-                    une place de marché de services marketing immobiliers,
+      <div class="ti"><br><br><br><br><br><
+          <h2 class="you"> You are ate Home </h2><br>
+                <p class="parag1"> 
+                    Apimo vous propose un logiciel immobilier complet et performant,<br>
+                    des sites internet optimisés pour le référencement et responsive design,<br>
+                    une place de marché de services marketing immobiliers,<br>
                     et enfin des formations digitales. 
-                </p><br><br><br>
+                </p><br>
           <h1 class="so"> Solution Group </h1>
           <h2 class="by"> By La Perla </h2>
       </div>
